--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Latest News</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
@@ -42,9 +43,12 @@
 								<img class="bottom-image-1" src="images/img-1.jpg" alt="boy is playing soccer">
 							</td>
 							<td>
-								<h3>FOOTBALL SEASON IS HERE</h3>	
-								<p>Support our team. Catch the football games this season at the campus field.</p>
-								<button>READ MORE</button>
+								<h3 class="football-title">FOOTBALL SEASON IS HERE</h3>	
+								<p class="football-text">Support our team. Catch the football games this season at the campus field.</p>
+								<!-- <a href="#" class="BUTTON_GGO">READ MORE</a> -->
+								<button class="BUTTON_GGO">READ MORE</button>
+
+
 							</td>
 						</tr>
 
@@ -53,7 +57,9 @@
 							<td>
 								<h3>DANCE TROUPE AUDITIONS</h3>	
 								<p>The dance troupe needs more members to join them as they perfom for plays and other events this school year.</p>
-								<button>READ MORE</button>
+								<!-- <a href="#" class="BUTTON_GGO">READ MORE</a> -->
+								<button class="BUTTON_GGO-1">READ MORE</button>
+
 							</td>
 							<td>
 								<img class="bottom-image-2" src="images/img-2.jpg" alt="boy is playing soccer">
@@ -67,7 +73,9 @@
 							<td>
 								<h3>COLLEGE FAIR</h3>	
 								<p>Attend our annual get-togethers and make new friends at the campus.</p>
-								<button>READ MORE</button>
+								<!-- <a href="#" class="BUTTON_GGO">READ MORE</a> -->
+								<button class="BUTTON_GGO">READ MORE</button>
+
 							</td>
 						</tr>
 
